--- a/src/ui/overrides.css
+++ b/src/ui/overrides.css
@@ -1,6 +1,16 @@
 .is-phone .fc {
 	height: calc(100% - 4rem);
 }
+
+.setting-item.group {
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.setting-item > *:last-child{
+	margin-left: var(--size-4-4);
+}
+
 .fc {
 	height: 100%;
 	--fc-button-text-color: var(--text-normal);
